--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,6 @@
- 
+<%
+=begin
+%>
 <div class="container js-booksIndex">
   <h1 class="#f3e5f5 purple lighten-5 center">[Rails+Vue.js]~Bookshelf~</h1>
   <div class="row #e3f2fd blue lighten-5">
@@ -34,3 +36,6 @@
   </div>
 </div>
 <%= javascript_pack_tag 'book' %>
+<%
+=end
+%>
